WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
157584
Beef up JSC profiler event log
https://bugs.webkit.org/show_bug.cgi?id=157584
Summary
Beef up JSC profiler event log
Filip Pizlo
Reported
2016-05-11 13:31:18 PDT
Also log more about compilation.
Attachments
the patch
(10.78 KB, patch)
2016-05-11 13:47 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-05-11 13:47:52 PDT
Created
attachment 278663
[details]
the patch
WebKit Commit Bot
Comment 2
2016-05-11 13:50:09 PDT
Attachment 278663
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/dfg/DFGPlan.cpp:225: Multi line control clauses should use braces. [whitespace/braces] [4] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3
2016-05-11 14:33:42 PDT
Comment on
attachment 278663
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=278663&action=review
r=me
> Source/JavaScriptCore/dfg/DFGPlan.cpp:222 > + RELEASE_ASSERT_NOT_REACHED();
Do we need that stupid COMPILE_QUIRK(...) thingy here?
Filip Pizlo
Comment 4
2016-05-11 14:34:57 PDT
(In reply to
comment #3
)
> Comment on
attachment 278663
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=278663&action=review
> > r=me > > > Source/JavaScriptCore/dfg/DFGPlan.cpp:222 > > + RELEASE_ASSERT_NOT_REACHED(); > > Do we need that stupid COMPILE_QUIRK(...) thingy here?
No because I unconditionally initialized the variable to null.
Filip Pizlo
Comment 5
2016-05-11 14:41:28 PDT
Landed in
http://trac.webkit.org/changeset/200705
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug